# model-compression

./: .gitignore  README.md  pyproject.toml  requirements.txt
all_models/: __init__.py  abstract_model.py  alexnet.py  alexnet_mnist.py  yolov5.py
compression/: clustering.py  clustering_keras.ipynb  clustering_notebook.ipynb  pruning.py  quantization.py  time_benchmark.py
